--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@ accept responses. If you have any further questions, please contact
 <receiver>ankit.i.sharma@pwc.com</receiver>
 <receiver>hrestos.mrakas@net-effect.com</receiver>
 <receiver>abhinav.verma@net-effect.com</receiver>
+<receiver>gbl_dnp_rm_group@pwc.com</receiver>
                         </receivers>
 
                         <fileSets>
