--- a/pom.xml
+++ b/pom.xml
@@ -120,18 +120,17 @@ accept responses. If you have any further questions, please contact
 <receiver>erinc.suluk@net-effect.com</receiver>
 <receiver>yogita.karmarkar@net-effect.com</receiver>
 <receiver>sumit.dhage@net-effect.com</receiver>
-<receiver>gaurav.kad@net-effect.com</receiver>
 <receiver>akash.gawali@net-effect.com</receiver>
 <receiver>brennen.mccrae@pwc.com</receiver>
 <receiver>fnu.sanskriti@pwc.com</receiver>
 <receiver>saachi.sharma@net-effect.com</receiver>
 <receiver>utkarsh.neb@net-effect.com</receiver>
 <receiver>viraj.mandavkar@net-effect.com</receiver>
-<receiver>sakshi.negi@net-effect.com</receiver>
 <receiver>ankit.i.sharma@pwc.com</receiver>
 <receiver>hrestos.mrakas@net-effect.com</receiver>
 <receiver>abhinav.verma@net-effect.com</receiver>
 <receiver>gbl_dnp_rm_group@pwc.com</receiver>
+<receiver>rahul.khot@net-effect.com</receiver>
                         </receivers>
 
                         <fileSets>
