--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@ accept responses. If you have any further questions, please contact
                        
 
 <receiver>yogita.karmarkar@pwc.com</receiver>
-<receiver>sumit.dhage@pwc.com</receiver>
+<receiver>sumit.d.dhage@pwc.com</receiver>
 <receiver>akash.gawali@pwc.com</receiver>
 <receiver>brennen.mccrae@pwc.com</receiver>
 <receiver>fnu.sanskriti@pwc.com</receiver>
@@ -132,7 +132,7 @@ accept responses. If you have any further questions, please contact
 <receiver>gbl_dnp_rm_group@pwc.com</receiver>
 <receiver>rahul.khot@pwc.com</receiver>
 <receiver>erinc.suluk@pwc.com</receiver>
-<receiver>erinc.suluk@net-effect.com</receiver>
+
 
                         </receivers>
 
